[package]
name = "rehyper"
version = "0.1.0"
authors = ["Yannick Schillo <yschillo@yansonline.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyperltl = { path = "../hyperltl" }
boolexp = { path = "../boolexp" }
clap = "2.33.2"
nix = "0.18.0"
tempfile = "3.1.0"
regex = "1.3.9"
lazy_static = "1.4.0"
varisat = "0.2.2"
log = "0.4.0"
env_logger = "0.7.1"
serde = "1.0.116"
#serde_json = "1.0.59"
bincode = "1.3.1"
